--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -15,6 +13,11 @@
 
       </div>
     <header>
+      <div class="container">
+        <div class="header-left">
+          <img src="https://github.com/curari/Lab./blob/master/coollogo_com-9551865.png" alt="" class="logo">
+        </div>
+      </div>
     <div class="main">
       <div class="main-top">
         <div class="container">
