--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
   </head>
   <body>
     <header>
-      <div class="header-logo"></div>
-      <div class="header-list">
-
-      </div>
-    <header>
       <div class="container">
         <div class="header-left">
           <img src="https://github.com/curari/Lab./blob/master/coollogo_com-9551865.png" alt="" class="logo">
         </div>
       </div>
+    </header>
     <div class="main">
       <div class="main-top">
         <div class="container">
