--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img src="https://github.com/curari/Lab./blob/master/cooltext320226283124243.png" alt="Curari Rab." class="logo"/>
+          <img src="https://lh3.googleusercontent.com/r8gf-NiTwjuH9X_oKp5zw4EMH7lVwDnnzsMqGreO66lxNZEbWVsgdRY63wNK7T0Z4tcwMc3vg1kFGLS4fQy6ZdaZjM9EWs0kzBOpg-d8mjOh4Dh-UTU=w371" alt="Curari Rab." class="logo"/>
         </div>
       </div>
     </header>
